--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-.section1 {
+.sol {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -25,8 +25,7 @@ a {
   width: 770px;
   height: 420px;
 }
-
-.section2 {
+.cuisine {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -36,8 +35,7 @@ a {
   width: 485px;
   height: 420px;
 }
-
-.section3 {
+.rangement {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -47,8 +45,7 @@ a {
   width: 350px;
   height: 420px;
 }
-
-.section4 {
+.menuiserie1 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -58,8 +55,7 @@ a {
   width: 630px;
   height: 420px;
 }
-
-.section5 {
+.decoration {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -69,8 +65,7 @@ a {
   width: 410px;
   height: 540px;
 }
-
-.section6 {
+.peinture1 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -80,8 +75,7 @@ a {
   width: 385px;
   height: 430px;
 }
-
-.section7 {
+.sdb {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -91,8 +85,7 @@ a {
   width: 650px;
   height: 370px;
 }
-
-.section8 {
+.chauffage {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -102,8 +95,7 @@ a {
   width: 300px;
   height: 460px;
 }
-
-.section9 {
+.menuiserie2 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -113,8 +105,7 @@ a {
   width: 435px;
   height: 240px;
 }
-
-.section10 {
+.electricite {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -124,7 +115,7 @@ a {
   width: 435px;
   height: 260px;
 }
-.section11 {
+.plomberie {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -133,9 +124,8 @@ a {
   left: 1880px;
   width: 435px;
   height: 135px;
-
 }
-.section12 {
+.peinture2 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -145,7 +135,7 @@ a {
   width: 385px;
   height: 300px;
 }
-.section13 {
+.quincaillerie1 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -155,8 +145,7 @@ a {
   width: 275px;
   height: 360px;
 }
-
-.section14 {
+.outillage {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -166,8 +155,7 @@ a {
   width: 375px;
   height: 360px;
 }
-
-.section15 {
+.eclairage {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -177,8 +165,7 @@ a {
   width: 410px;
   height: 370px;
 }
-
-.section16 {
+.quincaillerie2 {
   position: absolute;
   /* background-color: red; */
   border: solid;
@@ -188,30 +175,28 @@ a {
   width: 270px;
   height: 290px;
 }
-
-.section17 {
+.jardin1 {
   position: absolute;
   /* background-color: red; */
   border: solid;
-  color:red;
+  color: red;
   top: 1400px;
   left: 1515px;
   width: 810px;
   height: 290px;
 }
-
-.section18 {
+.jardin2 {
   position: absolute;
   /* background-color: red; */
   border: solid;
-  color:yellow;
+  color: yellow;
   top: 1240px;
   left: 1870px;
   width: 450px;
-  height: 170px;
+  height: 140px;
 }
 
-.section19 {
+.pointeur {
   position: absolute;
   /* background-color: red; */
   background-color: red;
