--- a/styles/globals.css
+++ b/styles/globals.css
@@ -270,3 +270,14 @@ a {
   border: solid;
   color: red;
 }
+#clignotant {
+  animation: Test 1s infinite;
+}
+@keyframes Test {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
