--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,72 @@
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Light.woff2)
+      format("woff2"),
+    url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Light.woff)
+      format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Regular.woff2)
+      format("woff2"),
+    url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Regular.woff)
+      format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s2.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-SemiBold.woff2)
+      format("woff2"),
+    url(https://s2.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-SemiBold.woff)
+      format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-LightItalic.woff2)
+      format("woff2"),
+    url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-LightItalic.woff)
+      format("woff");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Italic.woff2)
+      format("woff2"),
+    url(https://s1.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-Italic.woff)
+      format("woff");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: LeroyMerlin;
+  src: url(https://s2.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-SemiBoldItalic.woff2)
+      format("woff2"),
+    url(https://s2.lmcdn.fr/cdp-site/4.17.1/static/fonts/LeroyMerlinSans-Web-SemiBoldItalic.woff)
+      format("woff");
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+/* //////////////////////FIN-FONT//////////////////////////////////// */
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: LeroyMerlin;
+  background-color: #ffffff;
 }
 
 a {
@@ -263,16 +326,6 @@ a {
   width: 20px;
   height: 20px;
 }
-.liste {
-  position: absolute;
-  /* border: solid; */
-  color: rgb(2, 3, 3);
-  top: 60px;
-  left: 80px;
-  width: 250px;
-  height: 800px;
-  text-align: center;
-}
 
 .card {
   margin-left: 20;
@@ -283,7 +336,9 @@ a {
 
 .image {
   position: relative;
-  border: solid;
+  /* border: solid; */
+  margin-top: -36rem;
+  margin-right: 67rem;
 }
 /* .plan {
   display: flex;
@@ -321,8 +376,10 @@ a {
   margin-top: 20px;
   margin-bottom: auto;
   width: 800px;
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  border-radius: 1em;
+  justify-items: center;
+
+  /* background-color: rgba(0, 0, 0, 0.5) !important; */
+  /* border-radius: 1em; */
 }
 
 .social_icon span {
@@ -351,4 +408,34 @@ a {
   top: 0px;
   left: 0px;
   height: 7rem;
+}
+
+.mytitle {
+  color: #554f52;
+  font-weight: 400;
+  font-size: 25px;
+  height: 56px;
+}
+
+.modal-backdrop.show {
+  opacity: 0;
+}
+
+.sidebar {
+  overflow-y: scroll;
+}
+
+.all {
+  position: fixed;
+}
+
+.card-img-top {
+  border: #78be20 solid 0.5px;
+  display: flex;
+  justify-content: center;
+}
+
+.sidebtn {
+  background-color: #78be20;
+  border-color: #78be20;
 }
