--- a/styles/globals.css
+++ b/styles/globals.css
@@ -377,7 +377,7 @@ a {
   margin-bottom: auto;
   width: 800px;
   justify-items: center;
-  border : solid #78be20 1px
+  border: solid #78be20 1px;
 
   /* background-color: rgba(0, 0, 0, 0.5) !important; */
   /* border-radius: 1em; */
@@ -408,11 +408,11 @@ a {
   position: relative;
   top: 0px;
   left: 0px;
-  height: 7rem;
+  height: 9rem;
 }
 
 .mytitle {
-  color : black;
+  color: black;
   font-weight: 400;
   font-size: 25px;
   height: 56px;
@@ -441,9 +441,9 @@ a {
   border-color: #78be20;
 }
 
-.btn-outline-success{
-  color : #78be20;
-  border : #78be20 solid 0.5px;
+.btn-outline-success {
+  color: #78be20;
+  border: #78be20 solid 0.5px;
 }
 
 .mabar {
